// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageValidators Should toggle between popular / active / all validators 1`] = `
<tmpage-stub
  emptysubtitle=""
  emptytitle="No data"
  loaderpath="/img/validator-list-loading.svg"
>
  <div
    class="filterContainer"
  >
    <tmfield-stub
      class="searchField"
      placeholder="Search"
      type="text"
      value=""
    />
     
    <div
      class="filterOptions"
    >
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="active"
          value="Popular"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="Active"
        />
      </div>
       
      <div
        class="show-mobile-sorting"
      >
        <i
          class="filter-toggle material-icons notranslate"
        >
          filter_list
        </i>
      </div>
    </div>
  </div>
   
  <tablevalidators-stub
    delegations=""
    showonmobile="expectedReturns"
    validators=""
  />
   
  <!---->
</tmpage-stub>
`;

exports[`PageValidators Should toggle between popular / active / all validators 2`] = `
<tmpage-stub
  emptysubtitle=""
  emptytitle="No data"
  loaderpath="/img/validator-list-loading.svg"
>
  <div
    class="filterContainer"
  >
    <tmfield-stub
      class="searchField"
      placeholder="Search"
      type="text"
      value=""
    />
     
    <div
      class="filterOptions"
    >
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="Popular"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="active"
          value="Active"
        />
      </div>
       
      <div
        class="show-mobile-sorting"
      >
        <i
          class="filter-toggle material-icons notranslate"
        >
          filter_list
        </i>
      </div>
    </div>
  </div>
   
  <tablevalidators-stub
    delegations=""
    showonmobile="expectedReturns"
    validators=""
  />
   
  <!---->
</tmpage-stub>
`;

exports[`PageValidators Should toggle between popular / active / all validators 3`] = `
<tmpage-stub
  emptysubtitle=""
  emptytitle="No data"
  loaderpath="/img/validator-list-loading.svg"
>
  <div
    class="filterContainer"
  >
    <tmfield-stub
      class="searchField"
      placeholder="Search"
      type="text"
      value=""
    />
     
    <div
      class="filterOptions"
    >
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="Popular"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="active"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="Active"
        />
      </div>
       
      <div
        class="show-mobile-sorting"
      >
        <i
          class="filter-toggle material-icons notranslate"
        >
          filter_list
        </i>
      </div>
    </div>
  </div>
   
  <tablevalidators-stub
    delegations=""
    showonmobile="expectedReturns"
    validators=""
  />
   
  <!---->
</tmpage-stub>
`;

exports[`PageValidators shows a list of validators 1`] = `
<tmpage-stub
  emptysubtitle=""
  emptytitle="No data"
  loaderpath="/img/validator-list-loading.svg"
>
  <div
    class="filterContainer"
  >
    <tmfield-stub
      class="searchField"
      placeholder="Search"
      type="text"
      value=""
    />
     
    <div
      class="filterOptions"
    >
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="active"
          value="Popular"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="Active"
        />
      </div>
       
      <div
        class="show-mobile-sorting"
      >
        <i
          class="filter-toggle material-icons notranslate"
        >
          filter_list
        </i>
      </div>
    </div>
  </div>
   
  <tablevalidators-stub
    delegations=""
    showonmobile="expectedReturns"
    validators="[object Object],[object Object],[object Object],[object Object],[object Object]"
  />
   
  <!---->
</tmpage-stub>
`;

exports[`PageValidators shows a message if still loading 1`] = `
<tmpage-stub
  emptysubtitle=""
  emptytitle="No data"
  loaderpath="/img/validator-list-loading.svg"
  loading="true"
>
  <div
    class="filterContainer"
  >
    <tmfield-stub
      class="searchField"
      placeholder="Search"
      type="text"
      value=""
    />
     
    <div
      class="filterOptions"
    >
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="active"
          value="Popular"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="Active"
        />
      </div>
       
      <div
        class="show-mobile-sorting"
      >
        <i
          class="filter-toggle material-icons notranslate"
        >
          filter_list
        </i>
      </div>
    </div>
  </div>
   
  <tablevalidators-stub
    delegations=""
    showonmobile="expectedReturns"
    validators=""
  />
   
  <!---->
</tmpage-stub>
`;

exports[`PageValidators shows a message if there is an error to display 1`] = `
<tmpage-stub
  emptysubtitle=""
  emptytitle="No data"
  loaderpath="/img/validator-list-loading.svg"
>
  <div
    class="filterContainer"
  >
    <tmfield-stub
      class="searchField"
      placeholder="Search"
      type="text"
      value=""
    />
     
    <div
      class="filterOptions"
    >
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="active"
          value="Popular"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="Active"
        />
      </div>
       
      <div
        class="show-mobile-sorting"
      >
        <i
          class="filter-toggle material-icons notranslate"
        >
          filter_list
        </i>
      </div>
    </div>
  </div>
   
  <tablevalidators-stub
    delegations=""
    showonmobile="expectedReturns"
    validators=""
  />
   
  <!---->
</tmpage-stub>
`;

exports[`PageValidators shows a message if there is nothing to display 1`] = `
<tmpage-stub
  emptysubtitle=""
  emptytitle="No data"
  loaderpath="/img/validator-list-loading.svg"
>
  <div
    class="filterContainer"
  >
    <tmfield-stub
      class="searchField"
      placeholder="Search"
      type="text"
      value=""
    />
     
    <div
      class="filterOptions"
    >
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="active"
          value="Popular"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="Active"
        />
      </div>
       
      <div
        class="show-mobile-sorting"
      >
        <i
          class="filter-toggle material-icons notranslate"
        >
          filter_list
        </i>
      </div>
    </div>
  </div>
   
  <tablevalidators-stub
    delegations=""
    showonmobile="expectedReturns"
    validators=""
  />
   
  <!---->
</tmpage-stub>
`;

exports[`PageValidators shows the mobile sorting 1`] = `
<tmpage-stub
  emptysubtitle=""
  emptytitle="No data"
  loaderpath="/img/validator-list-loading.svg"
>
  <div
    class="filterContainer"
  >
    <tmfield-stub
      class="searchField"
      placeholder="Search"
      type="text"
      value=""
    />
     
    <div
      class="filterOptions"
    >
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="active"
          value="Popular"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio"
          customclass=""
          type="secondary"
          value="Active"
        />
      </div>
       
      <div
        class="show-mobile-sorting"
      >
        <i
          class="filter-toggle material-icons notranslate active"
        >
          filter_list
        </i>
      </div>
    </div>
  </div>
   
  <tablevalidators-stub
    delegations=""
    showmobilesorting="true"
    showonmobile="expectedReturns"
    validators=""
  />
   
  <!---->
</tmpage-stub>
`;
